--- a/public/css/style_product.css
+++ b/public/css/style_product.css
@@ -14,7 +14,7 @@ body {
     min-width: 1000px;
     max-width: 1366px;
     margin: 0 auto;
-    min-height: 100%;
+    /*min-height: 100%;*/
 }
 
 .header li{
