--- a/public/css/Base.css
+++ b/public/css/Base.css
@@ -21,7 +21,7 @@ body
 {
 	background-color: #D3E9F9;
 	border:thin #54985B solid; /* Выбор границ элемента*/
-	padding: 10px; /* Пространство внутри элемента*/ 
+	padding: 10px; /* Пространство внутри элемента*/
 	margin: 15px auto; /* Пространство за пределами документа. В данном случае располагает по центру*/
 	width:90%; /* Ширина блока*/
 	text-align:center; /* Расположение текста внутри элемента*/
@@ -38,7 +38,7 @@ nav {
 	margin: auto;
 	width:90%; /* Ширина блока*/
 	text-align:center; /* Расположение текста внутри элемента*/
-	border:1px solid #ccc;
+	/*border:1px solid #ccc;*/
 }
 
 nav a {
@@ -47,7 +47,7 @@ nav a {
 	text-decoration:none;
 	background-color:#f1f1f1;
 }
- 
+
 nav a:hover {
 	background-color:#bababa;
 	height:80px;
@@ -60,7 +60,7 @@ header
 {
 	background-color: #D3E9F9; /* Цвет фона элемента*/
 	border:thin #54985B solid; /* Выбор границ элемента*/
-	padding: 10px; /* Пространство внутри элемента*/ 
+	padding: 10px; /* Пространство внутри элемента*/
 	margin: 15px auto; /* Пространство за пределами документа. В данном случае располагает по центру*/
 	margin-bottom: 10px; /* Отступ снизу элемента*/
 	margin-top: 10px; /* Отступ сверху элемента*/
@@ -72,7 +72,7 @@ footer
 {
 	background-color: #D3E9F9; /* Цвет фона элемента*/
 	border:thin #54985B solid; /* Выбор границ элемента*/
-	padding: 10px; /* Пространство внутри элемента*/ 
+	padding: 10px; /* Пространство внутри элемента*/
 	margin: auto; /* Пространство за пределами документа. В данном случае располагает по центру*/
 	margin-bottom: 10px; /* Отступ снизу элемента*/
 	margin-top: 10px; /* Отступ сверху элемента*/
@@ -86,7 +86,7 @@ footer
 {
 	background-color: #D3E9F9; /* Цвет фона элемента*/
 	border:thin #54985B solid; /* Выбор границ элемента*/
-	padding: 10px; /* Пространство внутри элемента*/ 
+	padding: 10px; /* Пространство внутри элемента*/
 	margin: auto; /* Пространство за пределами документа. В данном случае располагает по центру*/
 	margin-bottom: 10px; /* Отступ снизу элемента*/
 	margin-top: 10px; /* Отступ сверху элемента*/
@@ -96,14 +96,14 @@ footer
 
 article
 {
-	
+
 }
 
 article header
 {
 	background-color: #CDF0EB; /* Цвет фона элемента*/
 /*	border:thin #54985B solid; /* Выбор границ элемента*/
-	padding: 10px; /* Пространство внутри элемента*/ 
+	padding: 10px; /* Пространство внутри элемента*/
 	margin: auto; /* Пространство за пределами документа. В данном случае располагает по центру*/
 	margin-bottom: 10px; /* Отступ снизу элемента*/
 	margin-top: 10px; /* Отступ сверху элемента*/
