--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 
-form 
+form
 {
   font-family: 'Palatino Linotype', serif;
   max-width: 800px;
@@ -11,79 +11,78 @@ form
   text-align:left; /* Расположение текста внутри элемента*/
 }
 
-form input:required 
+form input:required
 {
 	background-color: lightyellow;
 }
 
 
 
-form h1 
+form h1
 {
   margin-bottom: 0px;
 }
 
-form p 
+form p
 {
   margin-top: 0px;
 }
 
-form fieldset 
+form fieldset
 {
   margin-bottom: 15px;
   padding: 10px;
 }
 
-form legend 
+form legend
 {
   padding: 0px 3px;
   font-weight: bold;
   font-variant: small-caps;
 }
 
-form label 
+form label
 {
-  width: 150px;
   display: inline-block;
   margin: 6px;
   text-align:justify; /* Расположение текста внутри элемента*/
 }
 
-form em 
+form em
 {
   font-weight: bold;
   font-style: normal;
   color: #f00;
 }
 
-form input:focus 
+form input:focus
 {
   background: #eaeaea;
 }
 
-form input, textarea 
-{
-  width: 249px;
-}
+/*form input, textarea*/
+/*{*/
+/*  width: 249px;*/
+/*}*/
 
-form textarea 
+form textarea
 {
   height: 100px;
 }
 
-form select 
+form select
 {
   width: 254px;
-  
+
 }
 
-form input[type=checkbox] 
+form input[type=checkbox]
 {
   width: 30px;
 
 }
 
-form input[type=submit] 
+form input[type=submit]
 {
   width: 170px;
   padding: 10px;
