--- a/public/css/style_product.css
+++ b/public/css/style_product.css
@@ -17,10 +17,10 @@ body {
     min-height: 100%;
 }
 
-.header li{
-    list-style-type: none;
-}
-.header{
+/*.header li{*/
+/*    list-style-type: none;*/
+/*}*/
+.header1{
     text-align: center;
     margin-bottom: 20px;
 }
